@@ -21,6 +21,8 @@
  * ScarletDME Wiki: https://scarlet.deltasoft.com
  * 
  * START-HISTORY (ScarletDME):
+ * 23Jan22 gwb macOS requires sys/ioctl.h to be included.
+ * 
  * 28Feb20 gwb Changed integer declarations to be portable across address
  *             space sizes (32 vs 64 bit)
  *
@@ -48,6 +50,10 @@
 
 #include <qm.h>
 #include <qmnet.h>
+
+#ifdef __APPLE__
+  #include <sys/ioctl.h>
+#endif
 
 /* ======================================================================
    closeport()  -  Close a port                                           */
